--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Messenger</string>
     <string name="send">send</string>
+    <string name="message">Message</string>
+    <string name="active">Active</string>
 </resources>
