--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="active">Active</string>
     <string name="search_message">Search message</string>
     <string name="text_message">Text message</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="select_chats">Select chats</string>
+    <string name="remove_selection">Remove selection</string>
+    <string name="delete_selected_chats">Delete selected chats</string>
+
+    <string name="number_is_not_valid">Number is not valid please try again!</string>
 </resources>
